# MedMamba-XAI

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  update_05.py  update_05_fix.py
configs/: default.yaml
configs/data/: bloodmnist.yaml  dermamnist.yaml  multitask.yaml  octmnist.yaml  pathmnist.yaml
configs/model/: resnet50.yaml  vit.yaml  vmamba_base.yaml  vmamba_small.yaml  vmamba_tiny.yaml
configs/training/: multi_task.yaml  multi_task_contrastive.yaml  single_task.yaml
dataset/: download.py
docs/: architecture.md  xai_methodology.md
notebooks/: 00_eda.ipynb  01_data_pipeline_demo.ipynb  02_model_architecture.ipynb  03_xai_demo.ipynb  04_model_comparison.ipynb  04_vmamba_tiny_vs_resnet50_comparison.ipynb  05_all_models_comparison.ipynb
notebooks/cache/vmamba_vs_resnet50/: efficiency_results.csv
scripts/: evaluate.py  explainability.py  explode_npz.py  predict.py  recompute_prototypes.py  train.py
src/medical_mamba/: __init__.py
src/medical_mamba/data/: __init__.py  constants.py  dataset.py  samplers.py  transforms.py
src/medical_mamba/models/: __init__.py  backbone.py  blocks.py  heads.py  medical_vmamba.py  resnet_baseline.py  vit_baseline.py
src/medical_mamba/training/: __init__.py  losses.py  metrics.py  schedulers.py  trainer.py
src/medical_mamba/utils/: __init__.py  checkpoint.py  logging.py  seed.py
src/medical_mamba/xai/: __init__.py  gradcam.py  visualize.py
tests/: __init__.py  test_dataset.py  test_losses.py  test_model.py  test_xai.py
(+13 files in other folders)
